--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,4 +1,29 @@
 .header {
-  background-color: green;
-  height: 50px;
+  background-color: #2256a7;
+  color: white;
+  font-weight: 500;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  & > div:first-child {
+    font-size: 15px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: white;
+    color: #2256a7;
+  }
+
+  & > div:nth-child(2) {
+    font-size: 40px;
+  }
+
+  & > div:nth-child(3) {
+    font-size: 15px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: white;
+    color: #2256a7;
+  }
 }
