--- a/src/components/CategoryBar/styles.module.scss
+++ b/src/components/CategoryBar/styles.module.scss
@@ -1,18 +1,18 @@
 .bar {
-  background-color: #2256a730;
+  background-color: #2256a720;
   padding: 5px 15px;
   display: flex;
   justify-content: flex-start;
-  border-bottom: 2px solid #e31e25;
+  border-bottom: 1px solid #2256a7;
   & > .item {
-    background-color: #2256a7;
     margin: 0px 10px 0px 0px;
+    border: 1px solid #2256a7;
+    background-color: white;
     text-decoration: none;
     border-radius: 10px;
     font-weight: 600;
     font-size: 12px;
     cursor: pointer;
-    color: white;
     padding: 5px;
   }
 }
