--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,29 +1,34 @@
 .header {
-  background-color: #2256a7;
-  color: white;
-  font-weight: 500;
-  padding: 15px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  font-weight: 500;
+  color: #2256a7;
 
   & > div:first-child {
-    font-size: 15px;
-    padding: 10px 20px;
+    background-color: #2256a7;
     border-radius: 10px;
-    background-color: white;
-    color: #2256a7;
+    padding: 5px 20px;
+    font-weight: 600;
+    font-size: 12px;
+    margin: 15px;
+    color: white;
   }
 
   & > div:nth-child(2) {
-    font-size: 40px;
+    margin-top: 15px;
+    font-weight: 200;
+    font-size: 50px;
+    text-shadow: 0px 0px 10px white;
   }
 
   & > div:nth-child(3) {
-    font-size: 15px;
-    padding: 10px 20px;
+    background-color: #2256a7;
     border-radius: 10px;
-    background-color: white;
-    color: #2256a7;
+    padding: 5px 20px;
+    font-weight: 600;
+    font-size: 12px;
+    margin: 15px;
+    color: white;
   }
 }
