--- a/src/components/BookCard/styles.module.scss
+++ b/src/components/BookCard/styles.module.scss
@@ -2,7 +2,7 @@
   height: 350px;
   width: 250px;
   padding: 5px;
-  position: relative;
+  z-index: 50;
 }
 
 .content {
@@ -10,10 +10,31 @@
   height: 100%;
   border-radius: 5px;
   border: 1px solid #2256a7;
-  box-shadow: 0px 2px 5px silver;
   padding: 10px;
 
   & > .image {
+    border: 1px solid #2256a7;
+    width: 100%;
+    height: 230px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    position: relative;
+    .down {
+      cursor: pointer;
+      border: 2px solid #2256a7;
+      background-color: white;
+      padding: 10px 10px;
+      border-radius: 15px;
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+    }
+    & > img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  & > .noimage {
     border: 1px solid #2256a7;
     background: rgb(34, 86, 167);
     background: linear-gradient(
@@ -25,8 +46,17 @@
     height: 230px;
     border-radius: 10px;
     margin-bottom: 5px;
-    overflow: hidden;
     position: relative;
+    .down {
+      cursor: pointer;
+      border: 2px solid #2256a7;
+      background-color: white;
+      padding: 10px 10px;
+      border-radius: 15px;
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+    }
     & > img {
       width: 100%;
       height: 100%;
@@ -34,15 +64,26 @@
   }
 
   & > h1 {
-    font-size: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-size: 15px;
     font-weight: bold;
   }
   & > h2 {
-    font-size: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 15px;
     font-weight: 400;
   }
   & > h3 {
-    font-size: 20px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 15px;
     font-weight: 200;
   }
 }
