--- a/src/components/BookCard/styles.module.scss
+++ b/src/components/BookCard/styles.module.scss
@@ -13,12 +13,15 @@
   padding: 10px;
 
   & > .image {
-    border: 1px solid #2256a7;
+    border: 1px solid silver;
     width: 100%;
     height: 230px;
     border-radius: 10px;
     margin-bottom: 5px;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     .down {
       cursor: pointer;
       border: 2px solid #2256a7;
@@ -30,8 +33,8 @@
       right: 10px;
     }
     & > img {
+      padding: 5px;
       width: 100%;
-      height: 100%;
     }
   }
   & > .noimage {
@@ -65,7 +68,8 @@
 
   & > h1 {
     overflow: hidden;
-    white-space: nowrap;
+    height: 40px;
+    // white-space: nowrap;
     text-overflow: ellipsis;
     font-size: 15px;
     font-weight: bold;
