--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,28 +1,26 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   font-weight: 500;
   color: #2256a7;
+  @media (max-width: 500px) {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
 
   & > div:first-child {
-    background-color: #2256a7;
-    border-radius: 10px;
-    padding: 5px 20px;
-    font-weight: 600;
-    font-size: 12px;
-    margin: 15px;
-    color: white;
+    margin-top: 15px;
+    margin-left: 15px;
+    font-weight: 200;
+    font-size: 40px;
+    text-shadow: 0px 0px 10px white;
+    @media (max-width: 500px) {
+      font-size: 30px;
+    }
   }
 
   & > div:nth-child(2) {
-    margin-top: 15px;
-    font-weight: 200;
-    font-size: 50px;
-    text-shadow: 0px 0px 10px white;
-  }
-
-  & > div:nth-child(3) {
     background-color: #2256a7;
     border-radius: 10px;
     padding: 5px 20px;
@@ -30,5 +28,8 @@
     font-size: 12px;
     margin: 15px;
     color: white;
+    @media (max-width: 500px) {
+      display: none;
+    }
   }
 }
