--- a/src/components/LoginSection/styles.module.scss
+++ b/src/components/LoginSection/styles.module.scss
@@ -39,7 +39,8 @@
   margin-top: 30px;
 }
 
-.input[type="text"] {
+.input[type="text"],
+.input[type="password"] {
   padding: 5px 10px;
   margin-bottom: 30px;
   min-width: 300px;
