--- a/src/components/SearchResult/styles.module.scss
+++ b/src/components/SearchResult/styles.module.scss
@@ -3,7 +3,8 @@
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  margin-top: 250px;
+  margin-top: 200px;
+  margin-bottom: 50px;
 }
 
 .subcontainer {
