--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -9,18 +9,17 @@
     align-items: center;
   }
 
-  & > div:first-child {
-    margin-top: 15px;
+  & > .title {
     margin-left: 15px;
-    font-weight: 200;
-    font-size: 40px;
+    font-weight: 300;
+    font-size: 30px;
     text-shadow: 0px 0px 10px white;
     @media (max-width: 500px) {
       font-size: 30px;
     }
   }
 
-  & > div:nth-child(2) {
+  & > .label {
     background-color: #2256a7;
     border-radius: 10px;
     padding: 5px 20px;
