--- a/src/components/BookCard/styles.module.scss
+++ b/src/components/BookCard/styles.module.scss
@@ -1,6 +1,21 @@
+.down {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  border: 2px solid #2256a7;
+  background-color: white;
+  border-radius: 15px;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
 .card {
-  height: 350px;
-  width: 250px;
+  height: 300px;
+  width: 200px;
   padding: 5px;
   z-index: 50;
 }
@@ -15,23 +30,13 @@
   & > .image {
     border: 1px solid silver;
     width: 100%;
-    height: 230px;
+    height: 166px;
     border-radius: 10px;
     margin-bottom: 5px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    .down {
-      cursor: pointer;
-      border: 2px solid #2256a7;
-      background-color: white;
-      padding: 10px 10px;
-      border-radius: 15px;
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-    }
     & > img {
       padding: 5px;
       width: 100%;
@@ -46,20 +51,10 @@
       rgba(226, 29, 36, 1) 100%
     );
     width: 100%;
-    height: 230px;
+    height: 166px;
     border-radius: 10px;
     margin-bottom: 5px;
     position: relative;
-    .down {
-      cursor: pointer;
-      border: 2px solid #2256a7;
-      background-color: white;
-      padding: 10px 10px;
-      border-radius: 15px;
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-    }
     & > img {
       width: 100%;
       height: 100%;
