--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -8,27 +8,35 @@
     flex-direction: column-reverse;
     align-items: center;
   }
+  .leftContainer {
+    padding: 15px;
+    flex: 1;
+    .titleZone {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 10px;
 
-  & > .title {
-    margin-left: 15px;
-    font-weight: 300;
-    font-size: 30px;
-    text-shadow: 0px 0px 10px white;
-    @media (max-width: 500px) {
-      font-size: 30px;
-    }
-  }
+      .title {
+        font-weight: 600;
+        font-size: 15px;
+        text-shadow: 0px 0px 10px white;
+        @media (max-width: 500px) {
+          font-size: 30px;
+        }
+      }
 
-  & > .label {
-    background-color: #2256a7;
-    border-radius: 10px;
-    padding: 5px 20px;
-    font-weight: 600;
-    font-size: 12px;
-    margin: 15px;
-    color: white;
-    @media (max-width: 500px) {
-      display: none;
+      .label {
+        background-color: #2256a7;
+        border-radius: 10px;
+        padding: 5px 20px;
+        font-weight: 600;
+        font-size: 12px;
+        color: white;
+        @media (max-width: 500px) {
+          display: none;
+        }
+      }
     }
   }
 }
