--- a/src/components/FormComponents/styles.module.scss
+++ b/src/components/FormComponents/styles.module.scss
@@ -17,6 +17,9 @@
   border-radius: 0px 20px 0px 20px;
   width: 300px;
   font-size: 14px;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
 
 .fileLabel {
@@ -46,4 +49,7 @@
   border: 1px dashed #2256a7;
   font-size: 13px;
   font-weight: bold;
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
