--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -13,15 +13,19 @@
     flex: 1;
     .titleZone {
       display: flex;
+      flex-flow: row nowrap;
       justify-content: space-between;
       align-items: center;
+      @media (max-width: 500px) {
+        flex-flow: column nowrap;
+      }
 
       .title {
-        font-weight: 600;
-        font-size: 15px;
+        font-weight: 200;
+        font-size: 30px;
         text-shadow: 0px 0px 10px white;
         @media (max-width: 500px) {
-          font-size: 30px;
+          font-size: 20px;
         }
       }
 
@@ -33,9 +37,6 @@
         font-size: 12px;
         color: white;
         cursor: pointer;
-        @media (max-width: 500px) {
-          display: none;
-        }
       }
     }
 
