--- a/src/components/SearchBar/styles.module.scss
+++ b/src/components/SearchBar/styles.module.scss
@@ -9,12 +9,17 @@
   width: 100%;
   border-radius: 30px;
   border: none;
-  padding: 10px 30px;
+  padding: 7px 30px;
   font-size: 20px;
   font-weight: 300;
   border: 1px solid #2256a7;
   box-shadow: 0px 0px 0px white;
   transition: all ease 0.3s;
+  @media (max-width: 500px) {
+    font-size: 15px;
+    padding: 5px 20px;
+    width: 100%;
+  }
   &:focus {
     box-shadow: 0px 3px 5px #2256a7;
   }
