--- a/src/components/SearchResult/styles.module.scss
+++ b/src/components/SearchResult/styles.module.scss
@@ -5,6 +5,9 @@
   align-items: center;
   margin-top: 164px;
   margin-bottom: 50px;
+  @media (max-width: 500px) {
+    margin-top: 188px;
+  }
 }
 
 .subcontainer {
