--- a/src/components/ProfileModal/styles.module.scss
+++ b/src/components/ProfileModal/styles.module.scss
@@ -10,6 +10,8 @@
   border-radius: 10px;
   margin-right: 5px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
   flex: 1;
 }
 
@@ -29,7 +31,9 @@
 
 .email {
   font-size: 20px;
+  font-weight: 200;
   margin-bottom: 30px;
+  text-align: center;
 }
 
 .role {
@@ -46,7 +50,7 @@
 
 .actionCont {
   background-color: rgba(white, 0.5);
-  margin-top: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   .actionTitle {
     margin-bottom: 20px;
@@ -57,4 +61,15 @@
   color: #2256a7;
   margin-bottom: 10px;
   cursor: pointer;
+}
+
+.signout {
+  width: 100%;
+  color: white;
+  font-size: 13px;
+  cursor: pointer;
+  padding: 5px 20px;
+  text-align: center;
+  border-radius: 20px;
+  background-color: rgba(226, 29, 36, 1);
 }
