Added Category View and Changes in Profile Modal

--- a/src/components/ProfileModal/styles.module.scss
+++ b/src/components/ProfileModal/styles.module.scss
@@ -73,3 +73,9 @@
   border-radius: 20px;
   background-color: rgba(226, 29, 36, 1);
 }
+
+.studentDocsCont {
+  // background-color: red;
+  display: flex;
+  flex-direction: column;
+}
