--- a/src/components/LoginSection/styles.module.scss
+++ b/src/components/LoginSection/styles.module.scss
@@ -51,7 +51,7 @@
 
 .input[type="submit"] {
   padding: 5px 10px;
-  margin-bottom: 30px;
+  margin-top: 50px;
   min-width: 300px;
   border-radius: 10px;
   border: none;
