--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -16,8 +16,8 @@
   background-color: white;
   border-radius: 10px;
   padding: 15px;
-  width: 90%;
-  height: 90vh;
+  // width: 90%;
+  // height: 90vh;
   position: fixed;
   & > header {
     display: flex;
