--- a/src/components/CategoryManagerSection/styles.module.scss
+++ b/src/components/CategoryManagerSection/styles.module.scss
@@ -7,6 +7,9 @@
   justify-content: space-between;
   align-items: center;
   width: 600px;
+  @media (max-width: 600px) {
+    width: 300px;
+  }
 
   p {
     font-size: 15px;
